--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -68,8 +68,15 @@ li {
 }
 
 //  Headings
-h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
+h1 {
+    font-weight: 500;
+    font-style: normal;
+}
+
+
+h2, h3, h4, h5, h6 {
+    font-weight: 600;
+    font-style: normal;
 }
 
 // Links
