just show multi crypto fund

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -57,3 +57,14 @@
 .graph {
     background-color: $background;
 }
+
+.alloc-container {
+    display: flex;
+}
+
+.alloc-pie {
+    width: 400px;
+}
+.alloc-table {
+    flex-grow: 1;
+}
