--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,6 @@
     <link href='https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,500,500i,600,600i,700,700i,800,800i' rel='stylesheet'>
 
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="/cryptoriskcontrol-site/js/main.js"></script>
 
 </head>
