--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -167,3 +167,8 @@ ul.listing li.listing-item time {
 ul.listing li.listing-item a {
     color: $url-color;
 }
+
+#crypto_index_value {
+    margin-left: auto;
+    margin-right: auto;
+}
