rename crypto index value

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -171,4 +171,5 @@ ul.listing li.listing-item a {
 #crypto_index_value {
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
