change fund index size

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -172,4 +172,6 @@ ul.listing li.listing-item a {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    font-weight: 100;
+    font-size: 5em;
 }
