--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,8 @@
 <footer class="site-footer">
     {{ site.description }}<br />
 
-    Using <a href="http://jekyllrb.com/">Jekyll</a>
-    {% if site.sourcecode %}
-     :: <a href="{{ site.sourcecode }}">Website source</a>
-    {% endif %}
+    Forever Investment Solutions does not guarantee the timeliness, accuracy or completeness of any data or information relating to Crypto Risk-Control Index (the Index). Forever Investment Solutions makes no warranty, express or implied, as to the Index or any data or values relating thereto or results to be obtained therefrom, and expressly disclaims all warranties of merchantability and fitness for a particular purpose with respect thereto. It is not possible to invest directly in the Index. Back-tested performance is not actual performance. Past performance is not an indication of future results. To the maximum extent allowed by law, Forever Investment Solutions, its licensors, and its and their respective employees, contractors, agents, suppliers and vendors shall have no liability or responsibility whatsoever for any injury or damages - whether direct, indirect, consequential, incidental, punitive or otherwise - arising in connection with the Index.
+
     {% if site.analytics.provider and page.analytics != false %}
      :: Analytics by {{ site.analytics.provider }}
     {% endif %}
