--- a/css/main.scss
+++ b/css/main.scss
@@ -10,7 +10,7 @@ $vsmall-font-size: 0.66em;
 $base-line-height: 1.5;
 $spacing-unit:     1.5em;
 
-$white:#ffffff
+$white:      #ffffff;
 $grey-vlight:#eee;
 $grey-light: #ccc;
 $grey:       #888;
