--- a/css/main.scss
+++ b/css/main.scss
@@ -23,13 +23,13 @@ $red:        #b6321c;
 $background:        $white;
 $dark-background:   darken($background, 5%);
 $text-color:        $grey-vdark;
-$text-light-color:  $grey;
+$text-light-color:  $gre-dark;
 $url-color:         $red;
 $url-hover-color:   $orange;
 $header-text-color: $text-light-color;
 $header-hover-color:$text-color;
 $header-hover-url:  $url-color;
-$line-color:        $grey-light;
+$line-color:        $grey-dark;
 
 // Width of the content area
 $content-width:    50em;
