--- a/css/main.scss
+++ b/css/main.scss
@@ -23,7 +23,7 @@ $red:        #b6321c;
 $background:        $white;
 $dark-background:   darken($background, 5%);
 $text-color:        $grey-vdark;
-$text-light-color:  $gre-dark;
+$text-light-color:  $grey-dark;
 $url-color:         $red;
 $url-hover-color:   $orange;
 $header-text-color: $text-light-color;
