--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -74,8 +74,13 @@ h1 {
 }
 
 
-h2, h3, h4, h5, h6 {
+h2, h3, h4, h5 {
     font-weight: 600;
+    font-style: normal;
+}
+
+h6 {
+    font-weight: 300;
     font-style: normal;
 }
 
@@ -173,5 +178,5 @@ ul.listing li.listing-item a {
     margin-right: auto;
     text-align: center;
     font-weight: 100;
-    font-size: 5em;
+    font-size: 2em;
 }
