--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -8,7 +8,7 @@
     margin-right:auto;
     margin-top:  0;
     margin-bottom:$spacing-unit;
-    text-align: center;
+    text-align: justify;
     @extend %clearfix;
 }
 
