--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,7 @@ $grey-vdark: #222;
 $blue:       #0091ed;
 $orange:     #ca6c18;
 $red:        #b6321c;
+$midnight-blue: ##191970;
 
 $background:        $white;
 $dark-background:   darken($background, 5%);
