--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -74,9 +74,9 @@ th {
 }
 
 #metrics-table td {
-    text-align: left;
+    text-align: right;
 }
 
 #allocation-table td {
-    text-align: left;
+    text-align: right;
 }
