--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -179,5 +179,5 @@ ul.listing li.listing-item a {
     text-align: center;
     font-weight: 100;
     font-size: 3em;
-    color: $midnight-blue;
+    color: $light-seagreen;
 }
