--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,7 @@ $blue:       #0091ed;
 $orange:     #ca6c18;
 $red:        #b6321c;
 $midnight-blue: #191970;
+#light-seagreen: 	#20B2AA;
 
 $background:        $white;
 $dark-background:   darken($background, 5%);
