--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }} </a> {{ page.date | date: '%B %d, %Y' }}
+    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }} </a>
     <nav class="site-nav">
         <a href="#" class="menu-icon menu.open">
             <svg viewBox="0 0 18 15">
