--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -81,6 +81,10 @@ th {
     text-align: right;
 }
 
+#monthly-ret-table td {
+    text-align: right;
+}
+
 .text-justify {
   text-align: justify;
 }
