change perf presentation

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -181,3 +181,10 @@ ul.listing li.listing-item a {
     font-size: 3em;
     color: $light-seagreen;
 }
+
+#crypto_index_perf {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-weight: 100;
+}
