--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -188,3 +188,11 @@ ul.listing li.listing-item a {
   text-align: center;
   font-weight: 100;
 }
+
+#as_of_date {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-weight: 100;
+  font-size: 1em;
+}
