--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -189,7 +189,7 @@ ul.listing li.listing-item a {
   font-weight: 100;
 }
 
-#as_of_date {
+#as_of_date, #as_of_date_alloc {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
