--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -189,10 +189,16 @@ ul.listing li.listing-item a {
   font-weight: 100;
 }
 
-#as_of_date, #as_of_date_alloc {
+#as_of_date {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   font-weight: 100;
   font-size: 0.7em;
+}
+
+#as_of_date_alloc {
+     font-weight: 100;
+     font-size: 0.7em;
+     display: block;
 }
